--- a/regis.css
+++ b/regis.css
@@ -30,7 +30,41 @@
   
   /* header */
   @media only screen and (max-width: 480px) {
-    .nav {
+    .html {
+      font-size: 75%;
+    }
+    .beforeLogin-container a {
+      display: none;
+    }
+    .nav_list {
+      display: none;
+      flex-direction: column;
+      width: 100%;
+      position: absolute;
+      top: 60px;
+      left: 0;
+      background-color: #393E46;
+      z-index: 1;
+    }
+
+    .nav_list.active {
+        display: flex;
+    }
+
+    .nav_list li {
+        text-align: center;
+        margin: 10px 0;
+    }
+
+    .burger-nav {
+        display: block;
+    }
+    .avatar {
+      display: none;
+    }
+    /* .nav {
+      display: flex;
+      position: fixed;
         height: 230px;
         flex-direction: column;
         align-items: center;
@@ -57,7 +91,7 @@
   
     .nav a{
         margin-top: -40px;
-    }
+    } */
     
     .footer {
         flex-direction: column;
@@ -188,6 +222,148 @@
   .email, .instagram, .whatsapp {
     margin: 0 10px;
   }
+  
+  
+  body {
+      height: auto;
+      font-family: 'Poppins', sans-serif;
+      margin: 0;
+      font-family: 'Arial', sans-serif;
+      /* height: 3200px; 
+      width: 1728px; 
+      overflow: hidden;   */
+  }
+  
+  nav {
+      font-family: 'Poppins', sans-serif;
+      height: 100px;
+      background-color: #393E46;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin: 0 auto;
+      width: 100%;
+    }
+  
+    nav ul {
+      display: flex;
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
+    
+    nav li {
+      display: flex;
+      display: inline-block;
+      margin-right: 20px;
+    }
+    
+    nav a {
+      font-size: 1rem;
+      display: flex;
+      color: white;
+      text-decoration: none;
+      padding: 15px 15px;
+      position: relative;
+    }
+  
+  nav a:after {
+    display: flex;
+    content: '';
+    height: 3px;
+    width: 100%;
+    border-radius: 25px;
+    background: #00ADB5;
+    position: absolute;
+    left: 0;  
+    bottom: 10px;
+    opacity: 0;
+    transition: all 0.2s;
+    pointer-events: none;
+  }
+  
+  nav a:hover:after {
+    opacity: 1;
+  }
+  
+  .button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    cursor: pointer;
+    text-decoration: none;
+    color: #000;
+  }
+  
+  .button img {
+    width: 35px;
+    height: 40px;
+    margin-right: 90px;
+  }
+  
+  .logo-container img {
+    width: auto;
+    height: auto;
+    margin-left: 90px;
+  }
+  
+  .footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #393E46;
+    padding: 20px 100px;
+  }
+  
+  .imgfooter {
+    width: auto;
+    height: auto;
+  }
+  
+  .fleft, .fright {
+    display: flex;
+    align-items: center;
+  }
+  
+  .email, .instagram, .whatsapp {
+    margin: 0 10px;
+  }
+  
+
+body {
+    margin: 0;
+    padding: 0;
+}
+
+.beforeLogin-button {
+    position: relative;
+}
+
+.beforeLogin-button:after {
+    content: '';
+    height: 3px;
+    width: auto;
+    border-radius: 25px;
+    background: none; 
+    position: absolute;
+    left: 0;  
+    bottom: 10px;
+    opacity: 0;
+    transition: all 0.2s;
+    pointer-events: none;
+}
+
+.beforeLogin-button:hover:after {
+    opacity: 0;
+}
+
+.burger-nav {
+  display: none;
+  width: 35px;
+  height: 35px;
+  cursor: pointer;
+}
 /* start */
 
 @media screen and (max-width: 768px) {
